[package]
name = "v4l2_rs"
version = "0.1.0"
edition = "2021"
authors = ["Yuto Nakamura <78634880+yutyan0119@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.142"
v4l = "0.13.1"
v4l2-sys-mit = "0.2.0"

[[bin]]
name = "v4l2_rs"
path = "src/main.rs"

[[bin]]
name = "v4l2_rs2"
path = "src/main2.rs"
